<resources>
    <string name="app_name">FireBaseTestProject</string>
    <string name="save">Save</string>
    <string name="read">Read</string>
    <string name="e_mail">E-mail</string>
    <string name="sec_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="ent">Enter</string>
    <string name="exit">Выход</string>
    <string name="choose_image">Choose image</string>
</resources>